--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
               <a class="navigation-menu-link link current" href="">Студия</a>
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link current" href="portfolio.html"
+              <a class="navigation-menu-link link" href="portfolio.html"
                 >Портфолио</a
               >
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link current" href="">Контакты</a>
+              <a class="navigation-menu-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
