--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,7 @@
           >
           <ul class="navigation-menu list">
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link current" href="index.html"
-                >Студия</a
-              >
+              <a class="navigation-menu-link link" href="index.html">Студия</a>
             </li>
             <li class="navigation-menu-item">
               <a class="navigation-menu-link link current" href="portfolio.html"
@@ -31,7 +29,7 @@
               >
             </li>
             <li class="navigation-menu-item">
-              <a class="navigation-menu-link link current" href="">Контакты</a>
+              <a class="navigation-menu-link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
