Fixed btn visial in portfolio, added border-bottom for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!--Шапка портфолио-->
-    <header class="header">
+    <header class="header-portfolio">
       <div class="container">
         <nav class="navigation-main-nav">
           <a class="logo link" href="index.html" aria-label="Логотип">
