--- a/portfolio.html
+++ b/portfolio.html
@@ -87,139 +87,154 @@
         <div class="our-projects">
           <ul class="projects-list list">
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio1.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              <div class="projects-title-box">
-                <h2 class="projects-title">Технокряк</h2>
-                <h3 class="projects-type">Веб-сайт</h3>
+              <div class="project-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio1.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
               </div>
+              <h2 class="projects-title">Технокряк</h2>
+              <h3 class="projects-type">Веб-сайт</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio2.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
-                est suscipit quaerat amet debitis? Sit velit quis natus
-                necessitatibus, eos quas eaque quia exercitationem ex maiores
-                excepturi voluptatem possimus inventore.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio2.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Facilis est suscipit quaerat amet debitis? Sit velit quis
+                  natus necessitatibus, eos quas eaque quia exercitationem ex
+                  maiores excepturi voluptatem possimus inventore.
+                </p>
+              </div>
               <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
               <h3 class="projects-type">Дизайн</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio3.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. A
-                porro cumque laborum eveniet temporibus maiores laboriosam
-                possimus quasi necessitatibus impedit ab earum unde id commodi
-                veniam, repellendus officia assumenda neque!
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio3.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. A
+                  porro cumque laborum eveniet temporibus maiores laboriosam
+                  possimus quasi necessitatibus impedit ab earum unde id commodi
+                  veniam, repellendus officia assumenda neque!
+                </p>
+              </div>
               <h2 class="projects-title">Ресторан Seafood</h2>
               <h3 class="projects-type">Приложение</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio4.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
-                eligendi voluptatibus perspiciatis eum iusto facere error quasi
-                quia labore iste eius.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio4.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                  eligendi voluptatibus perspiciatis eum iusto facere error
+                  quasi quia labore iste eius.
+                </p>
+              </div>
               <h2 class="projects-title">Проект Prime</h2>
               <h3 class="projects-type">Маркетинг</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio5.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
-                eligendi voluptatibus perspiciatis eum iusto facere error quasi
-                quia labore iste eius.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio5.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                  eligendi voluptatibus perspiciatis eum iusto facere error
+                  quasi quia labore iste eius.
+                </p>
+              </div>
               <h2 class="projects-title">Проект Boxes</h2>
-
               <h3 class="projects-type">Приложение</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio6.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
-                eligendi voluptatibus perspiciatis eum iusto facere error quasi
-                quia labore iste eius.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio6.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                  eligendi voluptatibus perspiciatis eum iusto facere error
+                  quasi quia labore iste eius.
+                </p>
+              </div>
               <h2 class="projects-title">Inspiration has no Borders</h2>
               <h3 class="projects-type">Веб-сайт</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio7.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
-                eligendi voluptatibus perspiciatis eum iusto facere error quasi
-                quia labore iste eius.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio7.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                  eligendi voluptatibus perspiciatis eum iusto facere error
+                  quasi quia labore iste eius.
+                </p>
+              </div>
               <h2 class="projects-title">Издание Limited Edition</h2>
               <h3 class="projects-type">Дизайн</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio8.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
-                eligendi voluptatibus perspiciatis eum iusto facere error quasi
-                quia labore iste eius.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio8.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                  eligendi voluptatibus perspiciatis eum iusto facere error
+                  quasi quia labore iste eius.
+                </p>
+              </div>
               <h2 class="projects-title">Проект LAB</h2>
               <h3 class="projects-type">Маркетинг</h3>
             </li>
             <li class="projects-list-item">
-              <img
-                class="projects-img"
-                src="./Images/Portfolio/portfolio9.jpg"
-                alt=""
-              />
-              <p class="projects-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
-                eligendi voluptatibus perspiciatis eum iusto facere error quasi
-                quia labore iste eius.
-              </p>
+              <div class="projects-description-box">
+                <img
+                  class="projects-img"
+                  src="./Images/Portfolio/portfolio9.jpg"
+                  alt=""
+                />
+                <p class="projects-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  omnis ab nobis nisi sequi! Nihil, praesentium id assumenda
+                  eligendi voluptatibus perspiciatis eum iusto facere error
+                  quasi quia labore iste eius.
+                </p>
+              </div>
               <h2 class="projects-title">Growing Business</h2>
               <h3 class="projects-type">Приложение</h3>
             </li>
