--- a/portfolio.html
+++ b/portfolio.html
@@ -342,7 +342,19 @@
             </li>
           </ul>
         </div>
-        <div class="form-footer"></div>
+          <div class="form-footer">
+            <b class="social-links-text">подпишись</b>
+            <form action="#">
+              <div class="form-item" role="form">
+                <input class="form-mail" type="email" name="user-mail" id="" placeholder="E-mail" required />
+                <button class="form-button" type="submit">
+                  Подписаться
+                  <svg class="form-footer-send">
+                    <use href="./Images/sprite.svg#icon-iconsend"></use>
+                  </svg>
+                </button>
+              </div>
+            </form>
       </div>
     </footer>
   </body>
